2010-01-26  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch introduces a new module in PoCC.

	generators/clasttools: not function-activated. This module
	contains CLAST node extensions and functions to pretty-print the
	extended CLAST. Current extensions include:
	- clast_pragma_omp_for
	- clast_pragma_vectorize
	- clast_parfor

	* driver/pocc/include/pocc/driver-clastops.h,
	* driver/pocc/driver-clastops.c: Call now extended pretty-printer
	from the clasttools module instead of the pragmatize module.

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am: Update with reference to the new module.
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/irregular/configure.cfg,
	* config/irregular/driver.cfg: Update the configuration files to
	build the new module, change the build options for the depending
	ones.

2010-01-26  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch introduces three new modules in PoCC.

	1) generators/pragmatize: activated with option
	--pragmatizer. This module declares two new clast node
	types (clast_pragma_omp_for and clast_pragma_vectorize), and
	insert them in the AST where it is appropriate.

	2) optimizers/vectorizer: activated with option --vectorizer. This
	module aims at analyzing the CLAST to discover vectorizable loops.

	3) ir/scoptools: not function-activated. This module builds a
	scoplib representation of an arbitrary CLAST (sub)tree.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.c,
	* driver/src/options.h: Create the --vectorizer option. Create the
	--pragmatizer option.

	* driver/pocc/include/pocc/driver-clastops.h,
	* driver/pocc/driver-clastops.c: Call the vectorizer pass and the
	pragmatize pass after CLAST generation.

	* driver/pocc/Makefile.am,